@@ -3,11 +3,9 @@ package com.codeit.monew.domain.comment.service;
 import com.codeit.monew.domain.article.entity.Article;
 import com.codeit.monew.domain.article.repository.ArticleRepository;
 import com.codeit.monew.domain.comment.dto.CommentDto;
-import com.codeit.monew.domain.comment.dto.CommentOrderBy;
 import com.codeit.monew.domain.comment.dto.CommentRegisterRequest;
+import com.codeit.monew.domain.comment.dto.CommentSearchRequest;
 import com.codeit.monew.domain.comment.dto.CommentUpdateRequest;
-import com.codeit.monew.domain.comment.dto.CursorPageResponseCommentDto;
-import com.codeit.monew.domain.comment.dto.SortDirection;
 import com.codeit.monew.domain.comment.entity.Comment;
 import com.codeit.monew.domain.comment.exception.CommentErrorCode;
 import com.codeit.monew.domain.comment.exception.CommentException;
@@ -15,11 +13,12 @@ import com.codeit.monew.domain.comment.repository.CommentRepository;
 import com.codeit.monew.domain.commentLike.repository.CommentLikeRepository;
 import com.codeit.monew.domain.user.entity.User;
 import com.codeit.monew.domain.user.repository.UserRepository;
-import java.time.LocalDateTime;
+import com.codeit.monew.global.dto.CursorPageResponse;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.UUID;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
@@ -56,69 +55,44 @@ public class CommentService {
   }
 
   @Transactional(readOnly = true)
-  public CursorPageResponseCommentDto getComments(
-      UUID articleId,
-      String cursor,
-      LocalDateTime after,
-      int limit,
-      CommentOrderBy orderBy,
-      SortDirection direction,
+  public CursorPageResponse<CommentDto> getComments(
+      CommentSearchRequest request,
       UUID requestUserId
   ) {
     log.info("댓글 목록 조회. ArticleId: {}, cursor: {}, after: {}, limit: {}, orderBy: {}, direction: {}",
-        articleId, cursor, after, limit, orderBy, direction);
+        request.articleId(), request.cursor(), request.after(), request.getLimit(), request.getOrderBy(), request.getDirection());
 
-    if (orderBy == CommentOrderBy.likeCount) {
-      if ((cursor == null) != (after == null)) {
-        throw new CommentException(CommentErrorCode.INVALID_CURSOR_PARAMETER);
-      }
-      if(cursor != null) {
-        try {
-          Integer.parseInt(cursor);
-        } catch (NumberFormatException e) {
-          throw new CommentException(CommentErrorCode.INVALID_CURSOR_PARAMETER);
-        }
-      }
-    } else {
-      if ((cursor == null) != (after == null)) {
-        throw new CommentException(CommentErrorCode.INVALID_CURSOR_PARAMETER);
-      }
-      if (cursor != null) {
-        try {
-          UUID.fromString(cursor);
-        } catch (IllegalArgumentException e) {
-          throw new CommentException(CommentErrorCode.INVALID_CURSOR_PARAMETER);
-        }
-      }
-    }
+    CursorPageResponse<CommentDto> result = commentRepository.findComments(request, requestUserId);
 
-    int queryLimit = limit + 1;
-
-    // TODO: 댓글이 많아질 경우 COUNT 쿼리 성능 저하 가능성이 있음
-    long totalElements = commentRepository.countByArticleId(articleId);
-
-    UUID cursorId = (cursor != null && orderBy == CommentOrderBy.createdAt)
-        ? UUID.fromString(cursor) : null;
-    Integer cursorLikeCount = (cursor != null && orderBy == CommentOrderBy.likeCount)
-        ? Integer.parseInt(cursor) : null;
-
-    List<Comment> comments = commentRepository.findComments(
-        articleId, orderBy, after, cursorId, cursorLikeCount, queryLimit
-    );
-
-    List<UUID> commentIds = comments.stream()
-        .map(Comment::getId)
-        .toList();
+    List<UUID> commentIds = result.content().stream()
+        .map(CommentDto::id)
+        .collect(Collectors.toList());
 
     Set<UUID> likedSet = new HashSet<>(
         commentLikeRepository.findByUserIdAndCommentIdIn(requestUserId, commentIds)
     );
 
-    List<CommentDto> dtos = comments.stream()
-        .map(c -> CommentDto.of(c, c.getUser().getNickname(), likedSet.contains(c.getId())))
+    List<CommentDto> updateDtos = result.content().stream()
+        .map(dto -> new CommentDto(
+            dto.id(),
+            dto.articleId(),
+            dto.userId(),
+            dto.userNickname(),
+            dto.content(),
+            dto.likeCount(),
+            likedSet.contains(dto.id()),
+            dto.createdAt()
+        ))
         .toList();
 
-    return CursorPageResponseCommentDto.of(dtos, limit, totalElements, orderBy);
+    return new CursorPageResponse<>(
+        updateDtos,
+        result.nextCursor(),
+        result.nextAfter(),
+        result.size(),
+        result.totalElements(),
+        result.hasNext()
+    );
   }
 
   @Transactional
